# cnn-study

./: .gitignore  LICENSE  README.md  pyproject.toml  study_plan.md
configs/: config.yaml  experiment.yaml
configs/data/: cifar10.yaml  mnist.yaml
configs/hydra/: default.yaml
configs/lightning_module/: classifier.yaml
configs/logger/: tensorboard.yaml
configs/lr_scheduler/: consine_annealing.yaml  cosine_annealing.yaml
configs/model/: alexnet.yaml  lenet5.yaml  vgg16.yaml  vgg19.yaml
configs/models/: alexnet.yaml  lenet5.yaml
configs/optimizer/: adamw.yaml  sgd.yaml
configs/trainer/: default.yaml
doc/experiment_journals/lenet_activation_compare/: readme.md
doc/experiment_journals/lenet_pooling_compare/: readme.md
scripts/: train.py
src/cnn_study/: config.py
src/cnn_study/config/: __init__.py  component.py  dataset.py  experiment.py  factory.py  loader.py  model.py  train.py
src/cnn_study/data/data_modules/: __init__.py  cifar10.py  cifar10_data_module.py  mnist.py  mnist_data_module.py
src/cnn_study/models/: __init_.py  alexnet.py  classifier.py  lenet.py  vgg.py
src/cnn_study/training/: classifier.py  classifier_module.py
src/cnn_study/utils/: __init__.py
